# ratognize

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  ratognize.vcxproj  user_macros.props
etc/configs/: ratognize.ini
src/: barcode.h  blob.cpp  blob.h  cage.cpp  cage.h  color.cpp  color.h  constants.h  cvutils.cpp  cvutils.h  datetime.cpp  datetime.h  ini.cpp  ini.h  input.cpp  input.h  light.cpp  light.h  log.h  mfix.h  output_text.cpp  output_text.h  output_video.cpp  output_video.h  project.h  ratognize.cpp  ratognize.h  version.h.in
